--- a/stylesheets/buildingof-landing.css
+++ b/stylesheets/buildingof-landing.css
@@ -208,11 +208,14 @@ div.mc-field-group input {
 	-moz-border-radius-bottomleft:6px;
 	border-bottom-left-radius:6px;
 	border:1px solid #e0e0e0;
-	height:26px;
 	padding-left: 30px;
 	padding-right: 30px;
 	margin-right: 0px;
 
+}
+
+#mce-EMAIL {
+	height: 26px;
 }
 
 div.mc-field-group input {
