--- a/stylesheets/buildingof.css
+++ b/stylesheets/buildingof.css
@@ -127,9 +127,11 @@ blockquote > a {
 article > h3, h2, h1 {
 	color: #444444;
 	font-family: 'Libre Baskerville', serif;
-	padding-top: 10%;
 }
 
+article > h2 {
+	padding-top: 10%;
+}
 @keyframes fadein {
     from { opacity: 0; }
     to   { opacity: 1; }
