footer padding  & removed styling from html

--- a/stylesheets/buildingof.css
+++ b/stylesheets/buildingof.css
@@ -212,6 +212,7 @@ footer {
 
 	border-top: 1px solid #ededed;
 	padding-top: 40px;
+	padding-bottom: 40px;
 }
 
 footer > p {
@@ -224,3 +225,6 @@ footer > p {
 	padding-bottom: 0px;
 }
 
+#last-paragraph {
+	margin-bottom: 40px;
+}
