--- a/stylesheets/buildingof.css
+++ b/stylesheets/buildingof.css
@@ -49,9 +49,10 @@ nav > div {
 .gist {
 	font-size: 1.1em;
 	color: #B9B9B9;
-	padding-bottom: 50px;;
+	padding-bottom: 40px;;
 	font-family: 'Libre Baskerville', serif;
 	max-width:635px;
+	line-height: 1.6;
 
 }
 
@@ -113,7 +114,7 @@ p {
 
 blockquote {
 	font-size: 1em;
-	line-height: 1.5;
+	line-height: 1.7
 	font-family: 'Libre Baskerville', serif;
 	color: #808080;
 	padding-top: 3%;
