--- a/stylesheets/buildingof.css
+++ b/stylesheets/buildingof.css
@@ -118,14 +118,15 @@ a {
 }
 
 blockquote {
-	font-size: 1em;
-	line-height: 1.7
+	font-size: 1.3em;
+	line-height: 1.7;
 	font-family: 'Libre Baskerville', serif;
 	color: #535353;
 	padding-top: 2%;
 	padding-bottom: 2%;
 	margin-left: 0px;
 	margin-right: 0px;
+	font-style: italic;
 }
 
 .pullquote {
