--- a/stylesheets/buildingof.css
+++ b/stylesheets/buildingof.css
@@ -48,10 +48,9 @@ nav > div {
 
 .gist {
 	font-size: 1.1em;
-	color: #B9B9B9;
+	color: #8D8D8D;
 	padding-bottom: 20px;;
 	font-family: 'Libre Baskerville', serif;
-	max-width:635px;
 	line-height: 1.6;
 
 }
