--- a/stylesheets/buildingof.css
+++ b/stylesheets/buildingof.css
@@ -13,7 +13,7 @@ nav > button {
 .logo {
 }
 
-h1 {
+#first > h1 {
 	text-align: left;
     font-size: 3em;
     text-rendering: optimizeLegibility;
