updated title css and element.

--- a/stylesheets/buildingof.css
+++ b/stylesheets/buildingof.css
@@ -13,7 +13,7 @@ nav > button {
 .logo {
 }
 
-#first > h1 {
+#title {
 	text-align: left;
     font-size: 3em;
     text-rendering: optimizeLegibility;
