--- a/stylesheets/buildingof.css
+++ b/stylesheets/buildingof.css
@@ -308,3 +308,13 @@ figcaption {
 	color: #AAAAAA;
 	text-align: center;
 }
+
+ul, ol {
+
+	font-size: 1.2em;
+	font-family: 'Libre Baskerville', serif;
+	line-height: 1.78;
+	color: #353535;
+	list-style-type: circle;
+
+}
